test/libsolidity/syntaxTests/dataLocations/internalFunction/internal_function_parameters_no_data_location.sol
contract C {
    function g(uint[]) internal pure {}
}
// ----
// TypeError 6651: (28-34): Data location must be "storage", "memory", "calldata" or "stack" for parameter in function, but none was given.
